--- a/styles.css
+++ b/styles.css
@@ -55,11 +55,14 @@ a {
     margin-top: 0px;
 }
 
-
 .hero-button {
     background-color: #3882f6;
     padding: 10px 30px;
     border-radius: 4px;
+}
+
+.hero-img {
+    background-color: gray;
 }
 
 /* Tiles */
